Fixes for overlapping text
Fixes a visual bug encountered by users

--- a/web/docusaurus/src/css/custom.css
+++ b/web/docusaurus/src/css/custom.css
@@ -580,7 +580,6 @@ article .markdown {
 
 .menu__list {
   padding: 0 24px;
-  max-height: 75vh;
   overflow-y: auto;
 }
 
